--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "account-deletion-challenge",
   "license": "MIT",
   "scripts": {
-    "serve": "cross-env NODE_ENV=development parcel src/index.html --out-dir out"
+    "serve": "parcel src/index.html --out-dir out"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -14,8 +14,7 @@
     "@types/lodash": "4.14.141",
     "@types/parcel-bundler": "1.12.1",
     "@types/react": "16.9.5",
-    "@types/react-dom": "16.9.1",
-    "cross-env": "5.1.4"
+    "@types/react-dom": "16.9.1"
   },
   "dependencies": {
     "lodash": "4.17.15",
